# server/common/api.yml
@@ -163,7 +163,16 @@ definitions:
       tradeId:
         type: string
         example: 5da95370b8b19f94f11fce95
-        
+
+  fireStoneHeartBeat:
+    type: object
+    title: fireStoneHeartBeat
+    required:
+      - cookie   
+    properties:
+      cookie:
+        type: string
+        example: __utma=156575163.1101180334.1557107567.1557375466.1557738304.3; isSaveAccount=0; Hm_lvt_416c770ac83a9d996d7b3793f8c4994d=1572344617; user=MDphcXVhSVFjOjpOb25lOjUwMDo0MjUzOTk0Njc6NywxMTExMTExMTExMSw0MDs0NCwxMSw0MDs2LDEsNDA7NSwxLDQwOzEsMSw0MDsyLDEsNDA7MywxLDQwOzUsMSw0MDs4LDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAxLDQwOjI0Ojo6NDE1Mzk5NDY3OjE1NzQyNTY3NTA6OjoxNTA2MDQ4OTYwOjYwNDgwMDowOjFjOGFlMGY3YjUxYmNkZjQ5MjI3OTBmNjg3ZjMzYzNlMTpkZWZhdWx0XzM6MQ%3D%3D; userid=415399467; u_name=aquaIQc; escapename=aquaIQc; ticket=11fe4b0cedab783ea1fc2d592d537d46; historystock=002436; spversion=20130314; v=Ag0b1XVgbDoSGcgWkFKH0MLBHCKE6kG9yx6lkE-SSaQTRiPUFzpRjFtutWXc; Hm_lvt_78c58f01938e4d85eaf619eae71b4ed1=1574256074,1574256089,1574317827,1574343159; Hm_lpvt_78c58f01938e4d85eaf619eae71b4ed1=1574343159; PHPSESSID=7824b8ed7e3cd04bbd6edd564e61c7fc  
               
 
 paths:
@@ -374,7 +383,40 @@ paths:
             $ref: "#/definitions/fireStoneRock"
       responses:
         200:
-          description: Return the Firestone & Firerock service created result      
+          description: Return the Firestone & Firerock service created result   
+
+  /firestonerock/heartbeat/{accesstoken}:
+    get:
+      tags:
+        - Firestonerock  
+      description: start heart beat to ths 
+      parameters:
+        - name: accesstoken 
+          in: path
+          required: true
+          description: the accesstoken
+          type: string
+          x-example: NWQ5MDVkYjlmYzg0ZDMyMjRiMGViNTljOjE2Nzg0M2Q5ZDQ3ZGJlMGE2OWE4MWEzYjBjNDgwNmY1NDM5NmM5ZmY5YjU4OWExNTdkMTE3Y2FjOWQzYmMzMGU=
+      responses:
+        200:
+          description: Return the heart beat result
+
+  /firestonerock/pingheartbeat:
+    post:
+      tags:
+        - Firestonerock  
+      description: ping heart beat to ths to do the test
+      parameters:
+        - name: cookie 
+          in: body
+          required: true
+          description: the ths cookie
+          schema: 
+            $ref: "#/definitions/fireStoneHeartBeat"
+      responses:
+        200:
+          description: Return the heart beat result
+  
 
 
   /spec:
